BuildHughes/translation-tool/inputs/source_meta/objects/Order_Reference__c.object
<CustomObject>
    <description>Table mastered in Installation Database and data pushed to SFDC</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Value__c</fullName>
        <label>Master Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_premise_CentralDB_ID__c</fullName>
        <description>Staging DB ID</description>
        <externalId>true</externalId>
        <label>On-premise Staging DB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ord_Reference_Grouping__c</fullName>
        <label>Order Reference Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Value__c</fullName>
        <label>Sub Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Reference</label>
    <nameField>
        <label>Order Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order References</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>